# API-Gateway/src/models/JSONmodels.py
@@ -3,7 +3,7 @@ from typing import List, Optional
 from pydantic import BaseModel, EmailStr
 
 
-class UserSignInRequest(BaseModel):  # ❗ ИСПРАВЛЯЕМ: SignIp -> SignIn
+class UserSignInRequest(BaseModel):  
     email: str
     password: str
 
@@ -19,10 +19,9 @@ class UserSignInResponse(BaseModel):
     user_id: int
     username: str
     message: str
-    telegram_id: Optional[str] = None  # ❗ ДОБАВЛЯЕМ опциональное поле
+    telegram_id: Optional[str] = None  
 
 
-# ❗ ДОБАВЛЯЕМ МОДЕЛИ ДЛЯ TELEGRAM
 class TelegramAuthRequest(BaseModel):
     telegram_id: str
 
